some zeroing out

--- a/graphpaper/green_pad.html
+++ b/graphpaper/green_pad.html
@@ -31,6 +31,8 @@
         }
 
         * {
+            padding: 0px;
+            margin: 0px;
             box-sizing: border-box;
         }
 
@@ -123,16 +125,18 @@
 </head>
 
 <body class="side-lines">
-    <header>hi</header>
+    <header>
+        <center>chrome is being a jerk</center>
+    </header>
     <main>    
         <h1>hache uno</h1>
         <p><a href="https://social.lol/@billmerrill/114960584707420801">Why?</a></a></p>
 
-    <p>    kinch<br>vertigo<br>
-        gango
+    <p>    ich<br>ni<br>
+        san
     </p>
     <p>
-        a different girl
+        shi
     </p>           There is a dog barking, actually I think there are two, I wonder if a coyote is sneaking in, or a person?
         <p>
             There is a dog barking, actually I think there are two, I wonder if a coyote is sneaking in, or a person?
