--- a/graphpaper/green_pad.html
+++ b/graphpaper/green_pad.html
@@ -11,27 +11,29 @@
         sized in "grid size" or gs.  
         gs will equal a line-height to make text track the graph paper
 
-        - Header, 5 cells, height 3gs
+        - Header, 5 cells, height 2.5gs
             - fixed left margin: 5gs
             - flex body cells: 1/3 of body, x3
-            - fixed right margin: 3gs
+            - fixed right margin: 2.5gs
         - Body: height?
             -fixed left margin: 5gs
             -flex body
                 - graph apper grid, 1x1 gs
-            - fixed right margin: 3gs
-        - Footer?
+            - fixed right margin: 2.5gs
+        - Footer: height: 2.5gs
+            - 
+
         */
 
         :root {
-            /* font-family: monospace; */
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
             --grid-size: 1.0lh;
             /* --line-color: green;
             --heavy-line-color: darkgreen; */
             --line-color: #c7f6d6;
             --heavy-line-color: #7A9F86;
             --left-margin-width: calc(var(--grid-size) * 5);
-            --right-margin-width: calc(var(--grid-size) * 3);
+            --right-margin-width: calc(var(--grid-size) * 2.5);
             --midsection: calc(100vw - calc(var(--left-margin-width) + var(--right-margin-width)));
             --ms-third: calc(var(--midsection) / 3.0);
         }
@@ -115,6 +117,13 @@
                 100% 100%;
         }
 
+        footer {
+            /* a full height footer, placed at the bottom of the page, and the page extended */
+            position: relative;
+            height: 100px;
+            background-color: var(--heavy-line-color);
+        }
+
         /* elements */
         h1 {
             margin: 0px;
@@ -169,6 +178,9 @@
         <p>More aeroplanes.
         </p>
     </main>
+    <footer>
+        Feet
+    </footer>
 
 
 </body>
