--- a/graphpaper/green_pad.html
+++ b/graphpaper/green_pad.html
@@ -21,17 +21,16 @@
                 - graph apper grid, 1x1 gs
             - fixed right margin: 2.5gs
         - Footer: height: 2.5gs
-            - 
-
+            - bounded by margin lines
+            - no heavy line top
         */
 
         :root {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             --grid-size: 1.0lh;
-            /* --line-color: green;
-            --heavy-line-color: darkgreen; */
-            --line-color: #c7f6d6;
             --heavy-line-color: #7A9F86;
+            --line-color: #7a9f8622;
+            --heavy-line-width: 2px;
             --paper-color: #EBF3DE;
             --left-margin-width: calc(var(--grid-size) * 5);
             --right-margin-width: calc(var(--grid-size) * 2.5);
@@ -51,19 +50,20 @@
         }
 
 
-        /* attached to body, left and right margin bars */
+        /* left and right margin bars */
         .side-lines {
             --right-m:calc(100vw - var(--right-margin-width));
 
             height: 40px;
             margin: 0px;
             background-image: 
-                linear-gradient(to right, transparent var(--left-margin-width),
-                    var(--heavy-line-color) calc(var(--left-margin-width) + 1px), 
-                    transparent calc(var(--left-margin-width) + 2px)),
+                linear-gradient(to right, 
+                    transparent var(--left-margin-width),
+                    var(--heavy-line-color) calc(var(--left-margin-width) + var(--heavy-line-width)), 
+                    transparent calc(var(--left-margin-width) + calc(var(--heavy-line-width) + 1px))),
                 linear-gradient(to right, transparent var(--right-m), 
-                    var(--heavy-line-color )calc(var(--right-m) + 1px), 
-                    transparent calc(var(--right-m) + 2px));
+                    var(--heavy-line-color) calc(var(--right-m) + var(--heavy-line-width)), 
+                    transparent calc(var(--right-m) + calc(var(--heavy-line-width) + 1px)));
             background-size:
                 100% var(--right-margin-width),
                 100% var(--right-margin-width);
@@ -81,12 +81,13 @@
             --right-bar: calc(calc(100vw - var(--left-margin-width)) - var(--ms-third));
             background-image: 
                 linear-gradient(to right, transparent var(--left-bar),
-                    var(--heavy-line-color) calc(var(--left-bar) + 1px), 
-                    transparent calc(var(--left-bar) + 2px)),
+                    var(--heavy-line-color) calc(var(--left-bar) + var(--heavy-line-width)), 
+                    transparent calc(var(--left-bar) + calc(var(--heavy-line-width) + 1px))),
                 linear-gradient(to right, transparent var(--right-bar),
                     var(--heavy-line-color) calc(var(--right-bar) + 1px), 
-                    transparent calc(var(--right-bar) + 2px)),
-                linear-gradient(to bottom, transparent calc(var(--right-margin-width) - 1px),
+                    transparent calc(var(--right-bar) + calc(var(--heavy-line-width) + 1px))),
+                /* bottom of header bar */
+                linear-gradient(to bottom, transparent calc(var(--right-margin-width) - var(--heavy-line-width)),
                     var(--heavy-line-color) var(--right-margin-width));
             background-size: 
                 100% var(--right-margin-width),
@@ -117,7 +118,7 @@
 
         footer {
             height: var(--right-margin-width);
-            padding: 0rem calc(var(--right-margin-width) + 0.5rem) 0rem calc(var(--left-margin-width) + 0.5rem);
+            padding: 0.5rem calc(var(--right-margin-width) + 0.5rem) 0rem calc(var(--left-margin-width) + 0.5rem);
         }
 
 
