--- a/graphpaper/green_pad.html
+++ b/graphpaper/green_pad.html
@@ -130,17 +130,61 @@
         p {
             margin-bottom: 1lh;
         }
+
+        li {
+            margin-left: 3rem;
+        }
     </style>
 </head>
 
 <body class="side-lines">
     <header>
-        Don't forget to put your name, date, the class, and the assignment, or you will not get credit for your assignment.  No, seriously.
+        <!--Don't forget to put your name, date, the class, and the assignment, or you will not get credit for your assignment.  No, seriously.-->
     </header>
     <main>    
-        <h1>hache uno</h1>
-        <p><a href="https://social.lol/@billmerrill/114960584707420801">Why?</a></a></p>
+        <h1>A green pad</h1>
+        <br>
 
+        <p>
+            This is a green pad.  This paper was required to hand in homework in the few engineering courses
+            I took at Michigan Tech.  I was in Comptuer Science and briefly considered double majoring in 
+            Electrical Engineering, but I lacked talent for the physical labs.
+        </p>
+
+
+        <p>
+            Since Michigan Tech was primarly an engineering school, you'd see this paper all over the place.
+            This an a nice mechanical pencil were pretty standard gear for the engineers that would come in 
+            to my lab for Fortran help.
+        </p>
+
+        <p><a href="https://social.lol/@billmerrill/114960584707420801">Why?</a></p>
+
+        <p>
+            I learned a bunch of CSS that didn't exist the last time I shipped front-end for money, it was great
+            to read the docs, experiment, and finally get the tool to fit in my head.  It allowed me 
+            to fine tune what I was seeing.
+        </p>
+        <p>
+            This implementation uses very simple markup () and css calculations to generate css gradients, these act like background images
+            and can be controlled similarly. Grids are controlled by the line-height computed by font information.
+            In simple situations, this means the text stays lined up to the grid: neat!
+        </p>
+
+        <p>I have so many ideas for improving this, but this feels like a great stopping point.  Ideas include:
+            <ul>
+                <li>Adding the hole punches</li>
+                <li>Make the main content display whole numbers of grid squares</li>
+                <li>Adjusting the computations to add more line spacing and maintaining alignment</li>
+                <li>Making a tall aspect ratio version with just a simple header</li>
+                <li>Improve the text element styles to maintain grid alignment</li>
+                <li>a hand-writy font?</li>
+            </u>
+        <p>
+
+
+
+<!--
         <p><strong>Q:</strong> What is Ohm's Law and how is it used in electrical circuits?<br>
         <strong>A:</strong> Ohm's Law states that the current (I) through a conductor between two points is directly proportional to the voltage (V) across the two points and inversely proportional to the resistance (R). It is expressed as V = IR. This law is used to calculate the voltage, current, or resistance in a circuit when the other two quantities are known.</p>
 
@@ -152,7 +196,6 @@
 
         <p><strong>Q:</strong> What is the function of a transformer in an electrical system?<br>
         <strong>A:</strong> A transformer changes the voltage level in an AC electrical system. It consists of two coils (primary and secondary) wound around a core. By electromagnetic induction, it can step up (increase) or step down (decrease) the voltage depending on the ratio of turns in the coils.</p>
-<!--
         <p><strong>Q:</strong> Why are circuit breakers important in electrical systems?<br>
         <strong>A:</strong> Circuit breakers protect electrical circuits from damage caused by overload or short circuit. They automatically interrupt the flow of electricity when the current exceeds a safe level, preventing fires and equipment damage.</p>
 
@@ -222,7 +265,8 @@
 
     </main>
     <footer>
-        This footer is brought to you by the letter F. F is pretty handy, it starts a function, it might indicate a temperature in an inferior way, and it's a quick swear.
+        <!--This footer is brought to you by the letter F. F is pretty handy, it starts a function, it might indicate a temperature in an inferior way, and it's a quick swear.
+    -->
     </footer>
 
 
