fix header cell placement bug

--- a/graphpaper/green_pad.html
+++ b/graphpaper/green_pad.html
@@ -78,7 +78,7 @@
             
             /* cell bars */
             --left-bar: calc(var(--left-margin-width) + var(--ms-third));
-            --right-bar: calc(calc(100vw - var(--left-margin-width)) - var(--ms-third));
+            --right-bar: calc(calc(100vw - var(--right-margin-width)) - var(--ms-third));
             background-image: 
                 linear-gradient(to right, transparent var(--left-bar),
                     var(--heavy-line-color) calc(var(--left-bar) + var(--heavy-line-width)), 
